(Bug Fix) Separator on IE6 fix

--- a/branches/GWT-1.6/src/org/gwt/mosaic/theme/dark/public/gwt/dark/mosaic_rtl.css
+++ b/branches/GWT-1.6/src/org/gwt/mosaic/theme/dark/public/gwt/dark/mosaic_rtl.css
@@ -1163,7 +1163,6 @@ html>body .mosaic-DecoratedBottomTabBar .gwt-TabBarItem-selected .tabBottomRight
 
 .mosaic-FormSeparator div {
 	border: 1px solid #4d4d4d;
-	height: 0px !important;
 }
 
 /*** Basic Button with Images ***/
